Fix centering error on small screens when links move to column orientation

--- a/mobile.css
+++ b/mobile.css
@@ -17,6 +17,7 @@
   flex-direction:column;
   justify-content:space-between;
   margin:auto;
+  align-items: center;
 }
 
 .feature{
